# relix

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGES.md  Makefile  README  README.md  THANKS  asm.h  bio.c  bootmain.c  cat.c  console.c  defs.h  dfmt_flags.txt  echo.c  exec.c  file.c  file.h  forktest.c  fs.c  fs.h  gcc_beforeattr.txt  grep.c  helloworld.c  i686-unknown-none.json  ide.c  init.c  ioapic.c  kalloc.c  kbd.c  kill.c  lapic.c  ln.c  lockmgr.dlang  log.c  ls.c  m  main.c  (+36 more)
d/: Makefile  [.d  compiler_info.d  libkant.d  object.d  optional.d  result.d  test.d  traits.d
debug/: .gdbinit.tmpl  gdbutil
docs/: BUGS  CONTRIBUTING.md  DEVICES.md  LICENSE  STYLE.md  SYSCALL.md  VFS.md
include/: __intrinsics.h  alloca.h  assert.h  buf.h  ctype.h  date.h  defs.h  dirent.h  elf.h  endian.h  errno.h  ext.h  fcntl.h  float.h  getopt.h  glob.h  inttypes.h  limits.h  locale.h  math.h  pci.h  pwd.h  setjmp.h  signal.h  stat.h  stdalignof.h  stdarg.h  stdatomic.h  stdbool.h  stdckdint.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  strings.h  termios.h  time.h  types.h  (+2 more)
kernel/: Makefile  ahci.c  bio.c  console.c  cpu.c  disk.c  exec.c  file.c  fs.c  ide.c  ioapic.c  kalloc.c  kernel.ld  kernel64.ld  kernel_assert.c  kernel_print.c  kernel_string.c  (+23 more)
kernel/rust/kernel_example/: Cargo.toml
kernel/rust/kernel_example/src/: lib.rs
kernel/rust/rust_kernel/: Cargo.toml
kernel/rust/rust_kernel/src/: ahci.rs  allocator.rs  ansi_escape.rs  file.rs  hda.rs  ksyms.rs  lib.rs  lock.rs  pci.rs  printing.rs  scope_guard.rs  time.rs  ubsanitizer.rs
(+397 files in other folders)
