[package]
name = "kernel_example"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]
[dependencies]

bindings = { path = "../bindings", version = "0.1.0" }
rust_kernel = { path = "../rust_kernel", version = "0.1.0" }
