[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
anstyle-parse = { version = "0.2.6", features = ["utf8", "core"]}
kernel_bindings = { path = "../kernel_bindings", version = "0.1.0" }
spin = { version = "0.10.0", features = ["fair_mutex", "ticket_mutex"] }

[profile.release]
lto = true
